Align the desktop svg from the top to avoid jumping when switching between features. Increase it's size a bit

--- a/docs/output.css
+++ b/docs/output.css
@@ -840,6 +840,18 @@ section, header {
   top: 4.2rem;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-28 {
+  top: 7rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
